# chimcla

./: .gitignore  .readthedocs.yaml  README.md  asyncio_tools.py  b_01b_bar-rotation-debugging.ipynb  b_01c_bar-rotation-alternative.ipynb  b_01d__rotation_via_moments.ipynb  b_02_bar-histogram.ipynb  b_03_histogram-evaluation.ipynb  b_04_find_annomalies.ipynb  b_05_adapt_histograms.ipynb  b_07_backrotation.ipynb  b_bar-histogram.ipynb  b_bar-rotation.ipynb  cli.py  grid-segmentation.ipynb  pyproject.toml  requirements.txt  stage_2a_bar_selection.py  stage_2b_bar_C0_hist_dict.py  stage_3a_hist_based_classification.py  stage_3b_hist_area_based_classification.py  stage_3c_create_file_names.py  stage_3d_create_experimental_data.py  stage_3e_create_experimental_data_csv.py  todo_notes.md  util_bgr_convert.py  util_step_history_from_logfile.py
.github/workflows/: python-app.yml
data/: shading_correction_matrix.npy
data/dicts/: _total_res.dill
data/dicts_stable/: hist_2023-06-26_06-17-41_C50.dill  hist_2023-06-26_06-17-47_C50.dill  hist_2023-06-26_06-17-52_C50.dill  hist_2023-06-26_06-17-58_C50.dill  hist_2023-06-26_06-18-01_C50.dill  hist_2023-06-26_06-18-06_C50.dill  hist_2023-06-26_06-18-17_C50.dill  hist_2023-06-26_06-18-22_C50.dill  hist_2023-06-26_06-18-25_C50.dill  hist_2023-06-26_06-18-31_C50.dill  hist_2023-06-26_06-18-36_C50.dill  hist_2023-06-26_06-18-41_C50.dill  hist_2023-06-26_06-18-47_C50.dill  hist_2023-06-26_06-18-52_C50.dill  hist_2023-06-26_06-18-58_C50.dill  hist_2023-06-26_06-19-03_C50.dill  hist_2023-06-26_06-19-09_C50.dill  hist_2023-06-26_06-19-14_C50.dill  hist_2023-06-26_06-19-22_C50.dill  hist_2023-06-26_06-19-25_C50.dill  hist_2023-06-26_06-19-31_C50.dill  hist_2023-06-26_06-19-36_C50.dill  hist_2023-06-26_06-19-44_C50.dill  hist_2023-06-26_06-19-48_C50.dill  hist_2023-06-26_06-19-52_C50.dill  hist_2023-06-26_06-19-58_C50.dill  hist_2023-06-26_06-20-03_C50.dill  hist_2023-06-26_06-20-09_C50.dill  hist_2023-06-26_06-20-14_C50.dill  hist_2023-06-26_06-20-39_C50.dill  hist_2023-06-26_06-20-44_C50.dill  hist_2023-06-26_06-20-50_C50.dill  hist_2023-06-26_06-20-55_C50.dill  hist_2023-06-26_06-21-03_C50.dill  hist_2023-06-26_06-21-09_C50.dill  hist_2023-06-26_06-21-14_C50.dill  hist_2023-06-26_06-21-20_C50.dill  hist_2023-06-26_06-21-25_C50.dill  hist_2023-06-26_06-21-31_C50.dill  hist_2023-06-26_06-21-36_C50.dill  (+60 more)
doc/: README.md  README_old.md  Sascha.md
doc/source/: api_links.md  conf.py  index.md  index.rst
docs/: README.md  README_old.md  Sascha.md
notebooks/: b_01b_bar-rotation-debugging.ipynb  b_01c_bar-rotation-alternative.ipynb  b_01d__rotation_via_moments.ipynb  b_02_bar-histogram.ipynb  b_04_find_annomalies.ipynb  b_06_visualization_test.ipynb  b_07_backrotation.ipynb  grid-segmentation-show.ipynb  grid-segmentation.ipynb  grid-segmentation2.ipynb
tests/: conftest.py  test_lib.py
(+34 files in other folders)
