[project]
name = "chimcla"
version = "0.2.0"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# [project.package]
[tool.setuptools.packages.find]
where = ["src"]



[project.scripts]
# convert bgr to rgb
chimcla_bgr_convert = "chimcla.cli:bgr_convert"

# create experimental data
chimcla_ced = "chimcla.stage_3d_create_experimental_data:main"

# evaluate logfiles
chimcla_step_history_eval = "chimcla.util_step_history_from_logfile:main"


# specific commands that were once needed
chimcla_create_groups = "chimcla.cli:create_groups"
chimcla_rename_cell_imgs = "chimcla.cli:rename_cell_imgs"