[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chimcla"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "version"]


[project.scripts]
# convert bgr to rgb
chimcla_bgr_convert = "chimcla.cli:bgr_convert"

# create experimental data
chimcla_ced = "chimcla.stage_3d_create_experimental_data:main"

# evaluate logfiles
chimcla_step_history_eval = "chimcla.util_step_history_from_logfile:main"

# prepare the myriads of image files
chimcla_split_into_lots = "chimcla.util_file_sorting:split_into_lots"


# stage0 of image processing
chimcla_create_work_images = "chimcla.cli:create_work_images"



# specific commands that were once needed

# chimcla_create_groups = "chimcla.cli:create_groups"
# chimcla_rename_cell_imgs = "chimcla.cli:rename_cell_imgs"



# [project.package]
[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "chimcla.__version__"}

# this siginificantly speeds up pytest
[tool.pytest.ini_options]
testpaths = [ "tests"]
